Notification + Reject with comment